--- a/DemoApp/Pages/Shared/_Layout.cshtml
+++ b/DemoApp/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DBV2 Melding demo</title>
+    <title>@ViewData["Title"] - DBV2 Henvisning demo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DemoApp.styles.css" asp-append-version="true" />
@@ -21,7 +21,7 @@
             }
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">DBV2 melding demo</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">DBV2 Henvisning demo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                                 <button class="nav-link text-dark @selectedBarnCss" onclick="@jsSelectedBarnFunc ('/Barn')">Barn</button>
                         </li>
                         <li class="nav-item">
-                                <button class="nav-link text-dark @selectedBarnCss" onclick="@jsSelectedBarnFunc (' /Melding')">Melding</button>
+                                <button class="nav-link text-dark @selectedBarnCss" onclick="@jsSelectedBarnFunc ('/Melding')">Henvisning</button>
                         </li>
                         </ul>
                 </div>
