--- a/DemoApp/Pages/Partial/Tekst.cshtml
+++ b/DemoApp/Pages/Partial/Tekst.cshtml
@@ -6,26 +6,32 @@
     var maxLength = Model.GetMaxLength();
     bool flerlinje = maxLength > 150;
     string cssClassCaption = (flerlinje) ? "ledetekst_flerlinje" : "ledetekst";
-    var prefilled = TestdataGenerator.GetPrefilledValueFor(Model.Values, Model.GetId());
+    var prefilled = Model.Melding.GetPrefilledValueFor(Model.GetId());
     string value = (prefilled?.Value) ?? "";
     bool disable = (prefilled?.OpenToEdit == false);
     if (!disable)
     {
         Model.CheckAddEnabler();
     }
+    string visibleIdAndName = @Model.GetId() + ((disable) ? "_disabled" : ""); // gi disablet input et navn som gjør at de ikke hentes ut
     string disableCssClass = (disable) ? "disabled_button" : "";
     string disableStr = (disable) ? "disabled" : "";
-    <div class="@cssClassCaption @disableCssClass">@Model.GetCaption(true)@Html.Raw(Utils.getMandatoryMarker(Model.Mandatory))</div>
-
-
-    @if (flerlinje)
+    if (Model.UseCaption)
+    {
+        <div class="@cssClassCaption @disableCssClass">@Model.GetCaption(true)@Html.Raw(Utils.getMandatoryMarker(Model))</div>
+    }
+    if (disable)
+    {
+        <input type="hidden" name="@Model.GetId()" id="@Model.GetId()" value="@value" />
+    }
+    if (flerlinje)
     {
         @await Html.PartialAsync($"/Pages/Partial/Beskrivelse.cshtml", @Model.GetDescription())
-        <textarea class="flerlinjetekst @disableCssClass" name="@Model.GetId()" id="@Model.GetId()">@value</textarea>
+        <textarea class="flerlinjetekst @disableCssClass" name="@visibleIdAndName" id="@visibleIdAndName" @disableStr >@value</textarea>
     }
     else
     {
-        <input type="text" class="enlinjetekst @disableCssClass" name="@Model.GetId()" id="@Model.GetId()" value="@value" @disableStr />
+        <input type="text" class="enlinjetekst @disableCssClass" name="@visibleIdAndName" id="@visibleIdAndName" value="@value" @disableStr />
         @await Html.PartialAsync($"/Pages/Partial/Beskrivelse.cshtml", @Model.GetDescription())
     }
 }
